--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
 
+  flutter_riverpod: ^1.0.3
+  flutter_hooks: ^0.18.3
+  hooks_riverpod: ^1.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
