--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_hooks: ^0.18.3
   hooks_riverpod: ^1.0.3
 
+  webview_flutter: ^3.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
