--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
 
   webview_flutter: ^3.0.2
   palette_generator: ^0.3.3
+  cloud_firestore: ^3.1.12
 
 dev_dependencies:
   flutter_test:
