--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   webview_flutter: ^3.0.2
   palette_generator: ^0.3.3
   cloud_firestore: ^3.1.12
+  navigation_history_observer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
