--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   palette_generator: ^0.3.3
   cloud_firestore: ^3.1.12
   built_collection: ^5.1.1
+  dio: ^4.0.6
+  youtube_player_flutter: ^8.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +29,5 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - .env
