--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cloud_firestore: ^3.1.12
   built_collection: ^5.1.1
   dio: ^4.0.6
+  retrofit: ^3.0.1+1
+  logger: ^1.1.0
   youtube_player_flutter: ^8.0.0
   flutter_dotenv: ^5.0.2
 
@@ -27,6 +29,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  retrofit_generator: ^4.0.1
+  build_runner: ^2.1.10
+  json_serializable: ^6.1.6
+
 flutter:
   uses-material-design: true
   assets:
