--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   logger: ^1.1.0
   youtube_player_flutter: ^8.0.0
   flutter_dotenv: ^5.0.2
+  freezed_annotation: ^2.0.1
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +34,7 @@ dev_dependencies:
   retrofit_generator: ^4.0.1
   build_runner: ^2.1.10
   json_serializable: ^6.1.6
+  freezed: ^2.0.2
 
 flutter:
   uses-material-design: true
