--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   freezed_annotation: ^2.0.1
   json_annotation: ^4.4.0
+  smooth_page_indicator: ^1.0.0+2
+  preload_page_view: ^0.1.6
 
 dev_dependencies:
   flutter_test:
