--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   json_annotation: ^4.4.0
   smooth_page_indicator: ^1.0.0+2
   preload_page_view: ^0.1.6
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
