--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   preload_page_view: ^0.1.6
   rxdart: ^0.27.3
+  flutter_custom_tabs: ^1.0.4
 
 dev_dependencies:
   flutter_test:
