--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   preload_page_view: ^0.1.6
   rxdart: ^0.27.3
   flutter_custom_tabs: ^1.0.4
+  retry: ^3.1.0
 
 dev_dependencies:
   flutter_test:
