--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   rxdart: ^0.27.3
   flutter_custom_tabs: ^1.0.4
   retry: ^3.1.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
