--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   transparent_image: ^2.0.0
   flutter_svg: ^1.0.3
   shared_preferences: ^2.0.13
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
