--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,13 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   flutter_native_splash: ^2.1.6
+  scroll_to_index: ^3.0.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   retrofit_generator: ^4.0.1
   build_runner: ^2.1.10
   json_serializable: ^6.1.6
