--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_native_splash: ^2.1.6
   scroll_to_index: ^3.0.0
   async: ^2.8.2
+  visibility_detector: ^0.3.3
 
 
 dev_dependencies:
