--- a/.github/workflows/run_firebase_test_lab.yml
+++ b/.github/workflows/run_firebase_test_lab.yml
@@ -28,6 +28,9 @@ jobs:
       - name: pub get
         run: flutter pub get
 
+      - name: build_auto_generated_files
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+
       - name: Set up GCP credential
         uses: google-github-actions/auth@v1
         with:
