--- a/.github/workflows/run_firebase_test_lab.yml
+++ b/.github/workflows/run_firebase_test_lab.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Setup Repo
         uses: actions/checkout@v3
 
+      - name: create dot env file
+        run: echo ${{ secrets.DOT_ENV_BASE64 }} | base64 --decode> ./.env
+
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
